# tp1_concurrentes_1

./: Cargo.toml  README.md  pre-commit.sh  test-cases.sh
res/: orders.test1.json  orders.test2.json
src/: coffee_machine.rs  coffemachine.rs  dispensers_flag.rs  lib.rs  main.rs  ticket.rs
src/containers/: cacao_container.rs  coffe_container.rs  coffee_container.rs  coffee_grain_container.rs  container.rs  foam_container.rs  milk_container.rs  mod.rs  resourse.rs  water_container.rs
src/dipensers/: coffe_dispenser.rs  mod.rs
src/dispensers/: coffee_dispenser.rs  dispenser.rs  mod.rs
src/factories/: container_factory.rs  mod.rs
src/helpers/: container_message.rs  ingredients.rs  mod.rs  order.rs  order_manager.rs  order_reader.rs  resourse.rs  stats_presenter.rs  ticket.rs
