[package]
name = "tp1-alejovillores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
std-semaphore = "0.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"